fix: remove unused codes, fix viewBox of svg files

--- a/src/app/editor/component/editor/editor.component.html
+++ b/src/app/editor/component/editor/editor.component.html
@@ -14,18 +14,12 @@
         >
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <card-object
-                [cardType]="cardShape.type"
-                [lettering]="cardShape.lettering"
-              ></card-object>
-              <div
-                class="preview"
-                [ngClass]="cardShape.lettering"
-                [ngStyle]="{
-                  'background-image':
-                    'url(./assets/cards/' + cardShape.type + '.svg)'
-                }"
-              ></div>
+              <div class="preview">
+                <card-object
+                  [cardType]="cardShape.type"
+                  [lettering]="cardShape.lettering"
+                ></card-object>
+              </div>
             </div>
             <div
               *ngIf="currentStep === step.Text"
