--- a/src/app/editor/component/form-lettering/form-lettering.component.scss
+++ b/src/app/editor/component/form-lettering/form-lettering.component.scss
@@ -55,4 +55,12 @@
     display: flex;
     padding-bottom: 0px;
   }
+
+  .lettering-preview {
+    height: 60px;
+    width: 60px;
+    margin: 10px;
+    margin-bottom: 5px;
+    font-size: 15px;
+  }
 }
