--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,9 +5,8 @@
     <strong>Black Bunny</strong> Year!<br />
   </h1>
   <h3 class="font-h3">
-    믿거나 말거나! 새해에 듣는 첫 음악이 그 해를 결정한대요.<br />
-    소중한 사람에게 그 음악을 선물해보는건 어때요?<br />DJ 블랙버니가 추천하는
-    음악리스트를 확인해보세요!
+    믿거나 말거나!<br />1월 1일에 처음 들은 음악이 한해를 결정한대요.<br />
+    DJ 블랙버니의 플레이리스트,<br />소중한 사람에게 선물해보는건 어때요?
   </h3>
   <a [routerLink]="['/editor']">
     <div class="button-default button-editor">신년 카드 만들기</div></a
