--- a/src/app/viewer/component/card-viewer/card-viewer.component.html
+++ b/src/app/viewer/component/card-viewer/card-viewer.component.html
@@ -2,7 +2,7 @@
 <!-- + 음악 자동재생 -->
 <ng-container *ngIf="card && !isNewYear && isPreview">
   <div class="card-container">
-    <h3 class="font-h3 font-white">
+    <h3 class="font-h1-kr font-white">
       {{ card.sender }}님이 {{ card.receiver }}님에게 보내는 편지
     </h3>
     <object data="../../../../assets/folded-envelope.svg" width="400"></object>
