--- a/_variables.scss
+++ b/_variables.scss
@@ -7,6 +7,7 @@ $breakpoint-desktop: 1024px;
 
 // Colors
 $color-primary: #ff5a28;
+$color-sub: #ff4317;
 $color-black: #000000;
 $color-white: #ffffff;
 
