--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,6 +139,10 @@ button {
     font-weight: 400;
   }
 
+  .font-desc {
+    font-size: 15px;
+  }
+
   .button {
     flex: 1;
     height: 55px;
