--- a/src/app/popup/popup/popup.component.scss
+++ b/src/app/popup/popup/popup.component.scss
@@ -103,7 +103,7 @@
   .popup-container {
     min-width: 80vw;
     min-height: 45vw;
-    padding: 20px 10px 75px 20px;
+    padding: 20px 21px 75px;
 
     &.link {
       padding: 40px 30px 180px;
